tdf#102005 Fix F6 regression in start center

Change-Id: I152a79b79e75bf87c437dd4dd2976c73198e6b52
Reviewed-on: https://gerrit.libreoffice.org/68185
Tested-by: Jenkins
Reviewed-by: V Stuart Foote <vstuart.foote@utsa.edu>
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 77fe54df21195a1b0483fb06466ced935a186030)